# CorefResolution

./: .gitignore  CMakeLists.txt  README.md  main.cpp
CorefTrainer/: Classifier.cpp  Classifier.h  Document.cpp  Document.h  SingapourClassifier.cpp  SingapourClassifier.h  Util.cpp  Util.h
SyntParser/: ParsedPhrase.cpp  ParsedPhrase.h  TurboParser.cpp  TurboParser.h
UimaAnnotator/: CorefAnnotator.cpp  CorefAnnotator.h
