cmake_minimum_required(VERSION 3.2)
project(CorefResolution)
set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/bin")
include_directories($ENV{UIMACPP_HOME}/include)
include_directories(/usr/include/apr-1.0)
find_package(Boost COMPONENTS locale regex REQUIRED)
find_package(ICU REQUIRED)
include_directories(/usr/local/include)
link_directories(/usr/local/lib)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall -lm")
find_library(UIMA uima HINTS $ENV{UIMACPP_HOME}/lib)
set(SOURCE_FILES SyntParser/TurboParser.cpp SyntParser/TurboParser.h CorefTrainer/Document.cpp CorefTrainer/Document.h SyntParser/ParsedPhrase.cpp CorefTrainer/Classifier.cpp CorefTrainer/Classifier.h CorefTrainer/SingapourClassifier.cpp CorefTrainer/SingapourClassifier.h CorefTrainer/Util.h CorefTrainer/Util.cpp UimaAnnotator/CorefAnnotator.cpp UimaAnnotator/CorefAnnotator.h)
add_library(CorefAnnotator SHARED ${SOURCE_FILES})
set_target_properties(CorefAnnotator PROPERTIES PREFIX "")
target_link_libraries(CorefAnnotator fann ${Boost_LIBRARIES} ${ICU_LIBRARIES} ${UIMA})
